<resources>
    <string name="file_provider_authorities">com.fuh.fileprovider</string>

    <string name="app_name">Chattie</string>

    <string name="all_or">or</string>

    <string name="navigationdrawer_main_open">Open navigation drawer</string>
    <string name="navigationdrawer_main_close">Close navigation drawer</string>

    <string name="menu_main_settings">Settings</string>
    <string name="activity_login_title">Sign in</string>



    <string name="login_errorfieldrequired">This field is required</string>
    <string name="login_errornetwork">Network error! Check your internet connection.</string>
    <string name="login_errorunexpected">Unexpected error!</string>
    <string name="login_errorunexpectedwithmessage">Error: %1$s</string>

    <string name="loginmenu_signintitle">Unlock all features</string>
    <string name="loginmenu_signin">SIGN IN</string>
    <string name="loginmenu_signup">SIGN UP</string>

    <string name="login_errorfieldempty">Field is required!</string>
    <string name="login_email">Email</string>
    <string name="login_password">Password</string>

    <string name="login_signup">SIGN UP</string>
    <string name="login_signin">SIGN IN</string>
    <string name="login_forgotpassword">Forgot password?</string>
    <string name="login_errorresponse">Login failed! %1$s</string>
    <string name="login_emailerror">Email invalid!</string>
    <string name="login_passworderror">Password invalid!</string>
    <string name="login_successful">Welcome, %1$s</string>


    <string name="register_errornetwork">Network error! Check your internet connection.</string>
    <string name="register_errorunexpected">Unexpected error!</string>
    <string name="register_errorunexpectedwithmessage">Error: %1$s</string>
    <string name="register_email">Email</string>
    <string name="register_password">Password</string>
    <string name="register_errorfieldempty">Field is required!</string>
    <string name="register_firstnameerror">First name invalid!</string>
    <string name="register_lastnameerror">Last name invalid!</string>
    <string name="register_cityerror">City invalid!</string>
    <string name="register_emailerror">Email invalid!</string>
    <string name="register_passworderror">Password invalid!</string>
    <string name="register_repeatpassworderror">Passwords don\'t match!</string>
    <string name="register_errorresponse">Registration failed! %1$s</string>
    <string name="register_successful">Welcome, %1$s.\n Confirm your email to enjoy all features</string>
    <string name="register_createaccount">Create account</string>
    <string name="register_firstname">First name</string>
    <string name="register_lastname">Last name</string>
    <string name="register_city">City</string>
    <string name="register_repeatpassword">Repeat password</string>

    <string name="chat_menu_sign_out">Sign out</string>
    <string name="chat_menu_profile">Profile</string>

    <string name="profile_menu_save">Save</string>

    <string name="photo_chooser_invitation">Photo from</string>
    <string name="photo_chooser_from_camera">Camera</string>
    <string name="photo_chooser_from_gallery">Gallery</string>
    <string name="photo_chooser_from_choose_gallery_program">Select picture from</string>
    <string name="all_user_name_default">Unknown</string>
    <string name="chatrooms_menu_add">Add</string>
    <string name="createchatroom_menu_item_confirm">Confirm</string>
</resources>
